Update farcaster.json with Vercel URLs

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Rock Paper Scissors - Mini App</title>
     
     <!-- Farcaster Mini App Embed Metadata -->
-    <meta name="fc:miniapp" content='{"version":"1","imageUrl":"https://your-domain.com/embed-image.png","button":{"title":"Play Rock Paper Scissors","action":{"type":"launch_frame","name":"Rock Paper Scissors","url":"https://your-domain.com","splashImageUrl":"https://your-domain.com/icon.png","splashBackgroundColor":"#667eea"}}}' />
+    <meta name="fc:miniapp" content='{"version":"1","imageUrl":"https://miniapp-virid-six.vercel.app/embed-image.png","button":{"title":"Play Rock Paper Scissors","action":{"type":"launch_frame","name":"Rock Paper Scissors","url":"https://miniapp-virid-six.vercel.app/","splashImageUrl":"https://miniapp-virid-six.vercel.app/icon.png","splashBackgroundColor":"#667eea"}}}' />
     
     <!-- Lexend Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta property="og:image" content="https://miniapp-virid-six.vercel.app/og.png">
   </head>
   <body>
     <div id="root"></div>
